check_error_cmd2.txt
    Checking signapps-ai v0.1.0 (C:\Users\etien\OneDrive\Bureau\signapps\services\signapps-ai)
warning: unused import: `cloud::CloudMultimodalEmbed`
  --> services\signapps-ai\src\workers\embeddings_mm\mod.rs:12:9
   |
12 | pub use cloud::CloudMultimodalEmbed;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `cloud::CloudReranker`
  --> services\signapps-ai\src\workers\reranker\mod.rs:13:9
   |
13 | pub use cloud::CloudReranker;
   |         ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `http::HttpReranker`
  --> services\signapps-ai\src\workers\reranker\mod.rs:14:9
   |
14 | pub use http::HttpReranker;
   |         ^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
   --> services\signapps-ai\src\main.rs:301:9
    |
301 |     let mut builder = opendal::services::Fs::default();
    |         ----^^^^^^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0382]: use of moved value: `builder`
   --> services\signapps-ai\src\main.rs:303:42
    |
301 |     let mut builder = opendal::services::Fs::default();
    |         ----------- move occurs because `builder` has type `opendal::services::Fs`, which does not implement the `Copy` trait
302 |     builder.root(&storage_root);
    |     ------- value moved here
303 |     let storage = opendal::Operator::new(builder).unwrap().finish();
    |                                          ^^^^^^^ value used here after move

For more information about this error, try `rustc --explain E0382`.
warning: `signapps-ai` (bin "signapps-ai") generated 4 warnings
error: could not compile `signapps-ai` (bin "signapps-ai") due to 1 previous error; 4 warnings emitted
